tests/typing/fail/array/out_of_bounds_case.act
contract B

constructor()

creates

  int[2] a := [1,2]

transition f() : uint256

case a[-1] < 0:

updates
returns 1
